kubernetes/apps/default/bento-pdf/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf-deployment
  labels:
    app: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf:v2.8.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
