kubernetes/apps/default/bento-pdf/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bentopdf-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: traefik-external
spec:
  rules:
    - host: pdf.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bentopdf-service
                port:
                  number: 8080
  tls:
    - hosts:
        - pdf.${SECRET_DOMAIN}
